# Uzum_Compose

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/uz/gita/uzumcompose/: ExampleInstrumentedTest.kt  SetPinScreenInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bootcamp-lib.cpp  functions.h
app/src/main/java/uz/gita/: Random.kt
app/src/main/res/drawable/: arrow_downward_24px.xml  bg_uzum_card_44.xml  cashback_icon.xml  check_24px.xml  close_eye.xml  ic_24_scan_card.xml  ic_24_vault_line.xml  ic_account_wallet_24.xml  ic_account_wallet_active_24.xml  ic_add.xml  ic_add_card_64.xml  ic_add_card_plus.xml  ic_add_round.xml  ic_alert_error.xml  ic_arrow_north_east_24.xml  ic_arrow_south_west_24.xml  ic_attach_file_24.xml  ic_back.xml  ic_back_arrow.xml  ic_block_24.xml  ic_block_gray_24.xml  ic_budget_24.xml  ic_bus.xml  ic_calendar.xml  ic_calendar_inside.xml  ic_call_24.xml  ic_card_account_black.xml  ic_card_humo2.xml  ic_card_menu.xml  ic_card_new_icon.xml  ic_card_uzcard2.xml  ic_cashback_wallet.xml  ic_change_lang.xml  ic_change_password_new.xml  ic_chart_history.xml  ic_check_circle_active.xml  ic_chf_small_flag.xml  ic_close.xml  ic_close_black.xml  ic_close_menu.xml  (+114 more)
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
common/: build.gradle.kts
data/: build.gradle.kts
domain/: build.gradle.kts
entity/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
presentation/: build.gradle.kts
(+432 files in other folders)
